# ImageTriage

./: .codex_check_ai_cuda.py  .codex_check_torch_cuda.py  .codex_msi_build_log.txt  .gitignore  CODEBASE_REVIEW.md  README.md  freeze_support.py  pyproject.toml  setup_linux.py  setup_msi.py
aiculler/: adapter_training.py  cli.py  composite_ranking.py  diagnostics.py  features.py  learning.py  metrics.py  preference_learning.py  profile_scoring.py  run_logging.py  semantic.py  session_review.py  storage.py  technical_tags.py  telemetry.py
cli_editor/: README.md  photoedit_cli.py  pyproject.toml
cli_editor/docs/: edit-session-schema-v1.md
cli_editor/photo_terminal/: __init__.py  adjustments.py  cli.py  io.py  masks.py  preview.py  session.py
docs/: ai_v4_handoff.md  ai_v4_plan.md  image_triage_architecture.md
image_triage/: AI_READONLY_INTEGRATION.md  __init__.py  _version.py  ai_cluster_view.py  ai_model.py  ai_results.py  ai_runtime_packages.py  ai_training.py  ai_workflow.py  ai_workflow_center.py  aiculler_global_store.py  aiculler_workflow.py  annotation_queue.py  archive_ops.py  cache.py  category_prompts_dialog.py  decision_store.py  details_view.py  dino_prefilter.py  editor_copy.py  editor_render.py  file_associations.py  file_ops.py  filtering.py  formats.py  grid.py  image_resize.py  imaging.py  job_controller.py  library_store.py  mac_media.py  main.py  metadata.py  models.py  perceptual_hash.py  perf.py  phash_prefilter.py  preview.py  ranker_fit.py  ranker_profiles.py  (+13 more)
packaging/: ai_python_runner.py  ai_runtime_installer.py  image_triage_cleanup.py  (+1 more)
(+212 files in other folders)
